--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Neogym</title>
+  <title>Neogym 66026178</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Neogym
+              Neogym 66026178
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -484,7 +484,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                66026178
               </p>
             </div>
           </div>
@@ -496,7 +496,7 @@
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                66026178@gmail.com
               </p>
             </div>
           </div>
